--- a/index.html
+++ b/index.html
@@ -158,14 +158,11 @@
     </main>
     <footer class="footer">
         <div class="social-icons">
-          <a href="https://github.com/yourusername" target="_blank" aria-label="GitHub">
+          <a href="https://github.com/Phetsodonald" target="_blank" aria-label="GitHub">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://linkedin.com/in/yourusername" target="_blank" aria-label="LinkedIn">
+          <a href="https://linkedin.com/in/DonaldNkosi" target="_blank" aria-label="LinkedIn">
             <i class="fab fa-linkedin"></i>
-          </a>
-          <a href="mailto:youremail@example.com" aria-label="Email">
-            <i class="fas fa-envelope"></i>
           </a>
         </div>
         <p>&copy; 2025 Phetso. Made with 💙 during the Umuzi journey.</p>
