--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 I’ve worked on a variety of web projects — from personal blogs and email templates
                 to full-blown e-commerce sites.
               </p>
-              <a href="./documents/CV.pdf" target="_blank" class="cv-btn">view cv</a>
+              <a href="./documents/my- cv25.pdf" target="_blank" class="cv-btn">view cv</a>
               <a href="#contact" class="contact-btn">Contact Me</a>
             </article>
           
